watcher mostly implemented

--- a/sentinel/Dockerfile
+++ b/sentinel/Dockerfile
@@ -3,7 +3,7 @@ FROM redis:3.2.1-alpine
 ADD requirements.txt /etc/redis/
 RUN apk --update add net-tools python3 && \
     pip3 install -r /etc/redis/requirements.txt
-ADD sentinel-example.conf /etc/redis/
+ADD sentinel.conf.example /etc/redis/
 ADD sentinel.conf /etc/redis/
 ADD wrapper.py /etc/redis/
 
