--- a/compose.yml
+++ b/compose.yml
@@ -2,52 +2,46 @@ version: '2'
 
 services:
     r1:
-        image: redis:3.2.1-alpine
+        image: redis-ha
         network_mode: "host"
-        ports:
-            - "6379:6379"
-        entrypoint: "redis-server --port 6379"
+        environment:
+            - "NET_IFACE=wlan0"
+            - "PORT0=28118"
 
     r2:
-        image: redis:3.2.1-alpine
+        image: redis-ha
         network_mode: "host"
-        ports:
-            - "6380:6380"
-        entrypoint: "redis-server --port 6380 --slaveof 127.0.0.1 6379"
+        environment:
+            - "NET_IFACE=wlan0"
+            - "PORT0=31131"
 
     r3:
-        image: redis:3.2.1-alpine
+        image: redis-ha
         network_mode: "host"
-        ports:
-            - "6381:6381"
-        entrypoint: "redis-server --port 6381 --slaveof 127.0.0.1 6379"
+        environment:
+            - "NET_IFACE=wlan0"
+            - "PORT0=16880"
 
     s1:
-        image: redis:3.2.1-alpine
-        volumes:
-            - "./sentinel.conf:/data/sentinel.conf"
+        image: redis-ha-sentinel
         network_mode: "host"
-        ports:
-            - "26379:26381"
-        entrypoint: "sh -c 'cp /data/sentinel.conf /tmp/sentinel.conf && redis-sentinel /tmp/sentinel.conf --port 26379'"
+        environment:
+            - "NET_IFACE=wlan0"
+            - "PORT0=19107"
 
     s2:
-        image: redis:3.2.1-alpine
-        volumes:
-            - "./sentinel.conf:/data/sentinel.conf"
+        image: redis-ha-sentinel
         network_mode: "host"
-        ports:
-            - "26380:26380"
-        entrypoint: "sh -c 'cp /data/sentinel.conf /tmp/sentinel.conf && redis-sentinel /tmp/sentinel.conf --port 26380'"
+        environment:
+            - "NET_IFACE=wlan0"
+            - "PORT0=5629"
 
     s3:
-        image: redis:3.2.1-alpine
-        volumes:
-            - "./sentinel.conf:/data/sentinel.conf"
+        image: redis-ha-sentinel
         network_mode: "host"
-        ports:
-            - "26381:26381"
-        entrypoint: "sh -c 'cp /data/sentinel.conf /tmp/sentinel.conf && redis-sentinel /tmp/sentinel.conf --port 26381'"
+        environment:
+            - "NET_IFACE=wlan0"
+            - "PORT0=12226"
 
     zk:
         image: mesoscloud/zookeeper:3.4.8-ubuntu
