--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,48 +2,48 @@ version: '2'
 
 services:
     r1:
-        # build: redis/
-        image: redis-zk
+        build: redis/
+        #image: redis-zk
         network_mode: "host"
         environment:
             - "NET_IFACE=br-19665b0507e2"
             - "PORT0=10011"
 
     r2:
-        # build: redis/
-        image: redis-zk
+        build: redis/
+        #image: redis-zk
         network_mode: "host"
         environment:
             - "NET_IFACE=br-19665b0507e2"
             - "PORT0=10012"
 
     r3:
-        # build: redis/
-        image: redis-zk
+        build: redis/
+        #image: redis-zk
         network_mode: "host"
         environment:
             - "NET_IFACE=br-19665b0507e2"
             - "PORT0=10013"
 
     s1:
-        #build: sentinel/
-        image: sentinel-zk
+        build: sentinel/
+        #image: sentinel-zk
         network_mode: "host"
         environment:
             - "NET_IFACE=br-19665b0507e2"
             - "PORT0=10021"
 
     s2:
-        #build: sentinel/
-        image: sentinel-zk
+        build: sentinel/
+        #image: sentinel-zk
         network_mode: "host"
         environment:
             - "NET_IFACE=br-19665b0507e2"
             - "PORT0=10022"
 
     s3:
-        #build: sentinel/
-        image: sentinel-zk
+        build: sentinel/
+        #image: sentinel-zk
         network_mode: "host"
         environment:
             - "NET_IFACE=br-19665b0507e2"
